    committing is not utilized when input path is absolute.
    (Dustin Cote via aajisaka)

    MAPREDUCE-6452. NPE when intermediate encrypt enabled for LocalRunner.
    (Zhihai Xu)

    MAPREDUCE-6481. LineRecordReader may give incomplete record and wrong
    position/key information for uncompressed input sometimes. (Zhihai Xu via
    jlowe)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6425. ShuffleHandler passes wrong "base" parameter to getMapOutputInfo
    if mapId is not in the cache. (zhihai xu via devaraj)

    MAPREDUCE-6426. TestShuffleHandler#testGetMapOutputInfo is failing.
    (zhihai xu via devaraj)

    MAPREDUCE-6439. AM may fail instead of retrying if RM shuts down during the
    allocate call. (Anubhav Dhoot via kasha)

    MAPREDUCE-6442. Stack trace is missing when error occurs in client protocol
    provider's constructor (Chang Li via ozawa)

    MAPREDUCE-6474. ShuffleHandler can possibly exhaust nodemanager file
    descriptors (Kuhu Shukla via jlowe)

    MAPREDUCE-6472. MapReduce AM should have java.io.tmpdir=./tmp to be
    consistent with tasks (Naganarasimha G R via jlowe)

Release 2.7.1 - 2015-07-06 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6252. JobHistoryServer should not fail when encountering a 
    missing directory. (Craig Welch via devaraj)

    MAPREDUCE-6334. Fetcher#copyMapOutput is leaking usedMemory upon
    IOException during InMemoryMapOutput shuffle handler (Eric Payne via jlowe)

    MAPREDUCE-6339. Job history file is not flushed correctly because isTimerActive 
    flag is not set true when flushTimerTask is scheduled. (zhihai xu via devaraj)

    MAPREDUCE-6259. IllegalArgumentException due to missing job submit time
    (zhihai xu via jlowe)

    MAPREDUCE-6251. Added a new config for JobClient to retry JobStatus calls so